maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:5: error: 'case' expected but 'while' found.
    while(!estSurBiscuit)
    ^IslandMaze:6: error: '}' expected but ';' found.
    {
^IslandMaze:41: error: eof expected but '}' found.
}
^